--- a/โปรเจคสะท้านโลกหล้านภาลัย/Home.html
+++ b/โปรเจคสะท้านโลกหล้านภาลัย/Home.html
@@ -1,33 +1,43 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-      <title>Home Page</title>
-      <link href="C:\Users\asus\Desktop\โปรเจคสะท้านโลกหล้านภาลัย\HomeStyle.css" rel="stylesheet">
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <script type="text/javascript">
-          function login(){
-              alert("login แล้วนะ รู้ยัง??");
-          }
-      </script>
-  </head>
-  <body>
-    <div class="header">
-      <img src="https://lh4.googleusercontent.com/BuCRrB65P5GvuvwPNJyPm9MDPItjMiuxfVKboPkKgstvuTs4Qz9F9vjdY1exIr6o58IAOV5QQUoj5qU=w1920-h917-rw"/>
-      <form>
-          <input type="text" name="" placeholder="Browse"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="mainstyle.css">
+</head>
+<body>
+<div class="container-fulid">
+  <div class="row header z">
+    <div class="col-lg-3 " > <div class="alogo">logo</div> </div>
+    <div class="col-lg-6 ">
+      <form class="search">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit">
+              <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </div>
+        </div>
       </form>
-      <button class="button" onclick="login()">Login</button>
     </div>
+    <div class="col-lg-1 "> <div class="a">subscribe</div> </div>
+    <div class="col-lg-2 "> <div class="a">login</div> </div>
+  </div>
+  <div class="container">
+  <div class="row">
+    <div class="col-lg-3 b" > left </div>
+    <div class="col-lg-6 c" > center </div>
+    <div class="col-lg-3 b" > right </div>
+  </div>
 
-    <div class="row">
-      <div class="column left" style="background-color:#aaa;">ColumnLeft</div>
-      <div class="column middle" style="background-color:#bbb;">ColumnMid</div>
-      <div class="column right" style="background-color:#ccc;">ColumnRight</div>
-    </div>
+  </div>
 
-    <div class="footer">
-      <p>Footer</p>
-    </div>
-  </body>
+</div>
+
+</body>
 </html>
