--- a/โปรเจคสะท้านโลกหล้านภาลัย/Home.html
+++ b/โปรเจคสะท้านโลกหล้านภาลัย/Home.html
@@ -10,10 +10,16 @@
   <link rel="stylesheet" href="mainstyle.css">
 </head>
 <body>
-<div class="container-fulid">
-  <div class="row header z">
+  <div class="jumbotron jumbotron-fluid" id="headerJumbo">
+  <div class="container">
+    <h1>PRO-A-POW</h1>
+    <p>PROMOTION FOR YOU</p>
+  </div>
+  </div>
+  <!--<div class="row header" id="headPan">
     <div class="col-lg-3 " > <div class="alogo">logo</div> </div>
     <div class="col-lg-6 ">
+      <!--search
       <form class="search">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search">
@@ -24,19 +30,29 @@
           </div>
         </div>
       </form>
-    </div>
-    <div class="col-lg-1 "> <div class="a">subscribe</div> </div>
+      search-->
+    <!--<div class="col-lg-1 "> <div class="a">subscribe</div> </div>
     <div class="col-lg-2 "> <div class="a">login</div> </div>
-  </div>
+  </div>-->
   <div class="container">
   <div class="row">
-    <div class="col-lg-3 b" > left </div>
-    <div class="col-lg-6 c" > center </div>
-    <div class="col-lg-3 b" > right </div>
+    <div class="col-lg-3" id="sidePan"> left </div>
+      <div class="col-lg-6" id="centerPan" >
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4" id="proPan">
+              <div class="panel panel-primary" id="eachPro">
+                <div class="panel-heading">Pro1</div>
+                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">Subscribe</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="col-lg-3" id="sidePan" > right </div>
   </div>
-
   </div>
-
 </div>
 
 </body>
